--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "mcamara/laravel-localization": "^1.8",
         "opcodesio/log-viewer": "^3.1",
         "spatie/laravel-permission": "^6.1",
-        "tymon/jwt-auth": "^2.0"
+        "tymon/jwt-auth": "^2.0",
+        "wire-elements/modal": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
