--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "hisorange/browser-detect": "^5.0",
         "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
@@ -19,6 +20,7 @@
         "mcamara/laravel-localization": "^1.8",
         "opcodesio/log-viewer": "^3.1",
         "spatie/laravel-permission": "^6.1",
+        "stevebauman/location": "^7.1",
         "tymon/jwt-auth": "^2.0",
         "wire-elements/modal": "^2.0"
     },
