--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.5",
         "livewire/livewire": "^3.2",
         "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^1.8",
